--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,68 +1,392 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --blue1: #8EAFC0;
+  --blue2: #526C80;
+  --blue3: #718b9b;
+  --white1: #F2F0E9;
+  --white2: #FFFFFF;
+  --orange1: #c37328;
+  --orange2: #f8a95e;
+  --pink1: #ef6384;
+  --grey1: #b2b2b2;
+  --grey2: #e6e6e6;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+html {
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
 }
-a:hover {
-  color: #535bf2;
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 0;
+  background-color: var(--white1);
+}
+
+#root {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.grid-container {
+  display: grid;
+  grid: 1fr 1fr 1fr 1fr / 3fr 7fr;
+  gap: 25px;
+  grid-template-areas:
+    "header searchbox"
+    "header searchbox"
+    "targetbox resultbox"
+    "targetbox resultbox"
+  ;
+  /*  */
+  width: 85%;
+  height: 95%;
+  /* border: 1px solid black; */
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.grid-item {
+  transition: all 1s ease;
+  /*  */
+  background-color: var(--blue1);
+  border: 2px solid var(--blue3);
+  border-radius: 5px;
+  font-size: 0.6rem;
+  overflow-x: hidden;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.item-a {
+  grid-area: header;
 }
+
+.item-b {
+  grid-area: searchbox;
+}
+
+.item-c {
+  grid-area: targetbox;
+}
+
+.item-d {
+  grid-area: resultbox;
+}
+
+/* hover Grid effect */
+.item-b:hover {
+  grid-row: 1 / 4;
+}
+
+.item-b:hover~.item-d {
+  grid-row: 4 / span 1;
+}
+
+.item-d:hover {
+  grid-row: 2 / 5;
+}
+
+.item-b:has(~ .item-d:hover) {
+  grid-row: 1 / 2;
+}
+
+/* hover result box effect */
+
+/* header */
+.header{
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.header h2,
+.header .desc{
+  /* width: 100%; */
+  margin: 3px;
+  border-radius: 3px;
+  padding: 3px;
+  background-color: var(--white2);
+  border-bottom: 2px solid var(--blue2);
+}
+.header .desc{
+  flex : 1;
+  /*  */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 5px;
+}
+
+.header img{
+  width: 100%;
+  overflow: hidden;
+  /* height: 100%; */
+  /* aspect-ratio: 0.5 ; */
+}
+
+/* header */
+/* SearchBox */
+.searchBox{
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+
+.searchSelectBar,
+#searchBoxResult{
+  background-color: var(--white2);
+}
+
+.typeSelectBar,
+.dropOrDroppedByBar {
+  display: flex;
+  align-items: flex-end;
+  padding-left: 5%;
+  margin-top: 1%;
+  border-bottom: 1px solid var(--blue2);
+}
+
+.typeSelectBar .tab,
+.dropOrDroppedByBar .tab {
+  background-color: var(--grey1);
+  border: 1.5px solid black;
+  border-bottom: none;
+  border-radius: 3px 3px 0 0;
+  color: var(--white2);
+  padding: 3px 8px;
+  letter-spacing: 0.5px;
+}
+
+.tab.selected {
+  background-color: var(--pink1);
+  transform: scale(1.2);
+}
+
+.searchSelectBar {
+  border-top: 2px solid var(--pink1);
+  padding: 10px;
+  /*  */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+}
+
+.searchSelectBar>svg{
+  font-size: 30px;
+  color: var(--pink1);
+  transition: all 0.1s ease-out;
+}
+.searchSelectBar svg:hover{
+  transform: scale(1.2) rotate(45deg);
+  color: var(--pink1);
+}
+
+input {
+  flex: 1;  
+  background-color: var(--grey2);
+  border: 1px solid var(--grey1);
+  padding: 3px;
+  padding-left : 6px;
+  border-radius: 3px;
+}
+
+input:focus{
+  outline: none;
+}
+
+.searchBtn{
+  display: flex;
+  gap: 6px;
+  align-items: center;
+  /*  */
+  background: linear-gradient(var(--orange2), var(--orange1), var(--orange2));
+  color: var(--white2);
+  padding: 5px 9px;
+  border: 1px solid var(--blue2);
+  border-radius: 3px;
+  font-size: 0.8rem;
+}
+.searchBtn svg{
+  color: var(--white2);
+  font-size: 0.8rem;
+}
+
+#searchBoxResult{
+  overflow-y: auto;
+  flex: 1;
+  display: grid;
+  grid-template-columns:  repeat(auto-fill, minmax(50px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(50px, 1fr));
+  gap: 3px;
+  justify-content: space-around;
+  /*  */
+  padding: 3px 12px;
+  border-bottom: 2px solid var(--blue2);
+  margin-bottom: 4%;
+  text-align: center;
+}
+
+.mini-card{
+  width: 50px;
+  height: 50px;
+  border: 1px solid var(--grey1);
+  overflow: hidden;
+  /*  */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /*  */
+  border-radius: 10px;
+  transition: all 0.25s ease;
+}
+
+.mini-card:hover{
+  transform: scale(1.5);
+  background-color: var(--grey1);
+  border: 2px solid var(--blue2);
+}
+
+.mini-card img{
+  overflow:auto ;
+  /* scale: 0.8; */
+  max-height: 75%;
+  max-width: 120%;
+  /* width: 75%; */
+  /* height: 70%; */
+  /* height: 75%; */
+}
+
+.mini-card p{
+  width: 70%;
+  white-space: nowrap;
+  text-align: left;
+  font-size: 0.7rem;
+  font-weight: 800;
+}
+
+/* SearchBox */
+/* TargetBox */
+
+.targetBox{
+  padding: 3px;
+  /*  */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+}
+.targetBox .top{
+  background-color: var(--white2);
+  border-radius: 3px 3px 0 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding-top: 3%;
+  /*  */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.top p{
+  font-size: 0.75rem;
+}
+.top img{
+  overflow:auto ;
+  scale: 0.8;
+  /* max-height: 75%; */
+  max-width: 120%;
+}
+
+.targetBox .mapList{
+  background-color: var(--white2);
+  width: 100%;
+  height: 33%;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  gap: 3px ;
+}
+
+.targetBox .mapList a{
+  display: block;
+  font-size: 0.5rem;
+  padding: 0 7.5%;
+}
+
+/* TargetBox */
+
+/* ResultBox */
+.resultBox{
+  overflow-y: hidden;
+}
+
+.display{
+  overflow-y: auto;
+  flex: 1;
+  height: 95%;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  /*  */
+  background-color: var(--white2);
+  border-top: 1px solid var(--blue2);
+  padding: 3px 0;
+}
+.display .card{
+  display: flex;
+  align-items: center ;
+  justify-content: flex-start;
+  /* max-height: 50px; */
+  /*  */
+  padding: 3px 0;
+  padding-left: 8px ;
+}
+
+.card:nth-child(even){
+  background-color: var(--blue1);
+}
+
+.card .left{
+  min-width: 75px;
+  width: 75px;
+  position: relative;
+}
+
+.card .left img{
+  max-width: 50px;
+  transition: all 0.1s;
+}
+
+.card .left img:hover{
+  transform: translateY(-2px);
+}
+
+
+.left .inListItemDetail{
+  position: absolute;
+  top: 0px;
+  left: 35px;
+  width: 190px;
+  height: 200px;
+  /* min-height: 200px; */
+  z-index: 2;
+  /*  */
+  /* background-color: var(--blue3); */
+  border: 1px solid var(--blue2);
+  visibility: hidden;
+  overflow: auto;
+}
+
+.left img:hover ~ .inListItemDetail,
+.inListItemDetail:hover{
+  visibility: visible;
+}
+
+/* ResultBox */
