--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -16,6 +16,7 @@
 html {
   font-size: 12px;
   font-family: 'Roboto', sans-serif;
+  cursor: url(maple_cursor.cur), pointer;
 }
 
 * {
@@ -52,7 +53,7 @@ body {
 }
 
 .grid-item {
-  transition: all 1s ease;
+  /* transition: all 1s ease; */
   /*  */
   background-color: var(--blue1);
   border: 2px solid var(--blue3);
@@ -160,6 +161,13 @@ body {
   letter-spacing: 0.5px;
 }
 
+.typeSelectBar .tab:hover,
+.searchSelectBar > svg,
+.mini-card,
+.targetBox img,
+.card img{
+  cursor: url(maple_move.cur), pointer;
+}
 .tab.selected {
   background-color: var(--pink1);
   transform: scale(1.2);
@@ -181,8 +189,22 @@ body {
   transition: all 0.1s ease-out;
 }
 .searchSelectBar svg:hover{
-  transform: scale(1.2) rotate(45deg);
   color: var(--pink1);
+  animation: zoom_rotation 2s ease-in-out infinite;
+}
+
+@keyframes zoom_rotation {
+  0% {
+      transform: rotate(0deg) scale(1.5);
+  }
+
+  50%{
+    transform: rotate(180deg) scale(2.0);
+  }
+
+  100% {
+      transform: rotate(360deg) scale(1.5);
+  }
 }
 
 input {
@@ -370,7 +392,7 @@ input:focus{
 
 .card .left img{
   max-width: 50px;
-  transition: all 0.1s;
+  /* transition: all 0.1s; */
 }
 
 .card .left img:hover{
