--- a/my-react-app/src/ResultBox/ResultBox.css
+++ b/my-react-app/src/ResultBox/ResultBox.css
@@ -11,3 +11,10 @@
     --grey2: #e6e6e6;
 }
 
+#resultBox div.tab-content {
+    border-top: 0;
+}
+
+#resultBox div[role=tabpanel]{
+    border: 2px solid var(--pink1) !important;
+}
