--- a/my-react-app/src/scss/custom.scss
+++ b/my-react-app/src/scss/custom.scss
@@ -24,6 +24,7 @@ $custom-colors: (
   "maple-grey": #B3B3B3,
   "maple-orange-1": #F7AF61,
   "maple-orange-2": #C06D23,
+  "maple-orange-3": #FF5600,
   "maple-blue-1": #268CCB,
   "maple-blue-2": #60BDF3,
 
@@ -52,16 +53,3 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 
 // 8. Add additional custom code here
 
-
-// :root {
-//     --blue1: #8EAFC0;
-//     --blue2: #526C80;
-//     --blue3: #718b9b;
-//     --white1: #F2F0E9;
-//     --white2: #FFFFFF;
-//     --orange1: #c37328;
-//     --orange2: #f8a95e;
-//     --pink1: #ef6384;
-//     --grey1: #b2b2b2;
-//     --grey2: #e6e6e6;
-// }
