--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -438,3 +438,12 @@ input:focus{
 }
 
 /* ResultBox */
+/* ControlPanel */
+div.buttonSetting{
+  position: fixed;
+  top : 1.5rem;
+  right : 1.5rem;
+
+}
+
+/* ControlPanel */
